<resources>
    <string name="app_name">Simple_todo</string>
    <string name="username">Username</string>
    <string name="password">password</string>
    <string name="login">Login</string>
    <string name="not_a_registered_user">Not a Registered User?</string>
    <string name="register">REGISTER</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="already_registered">Already Registered?</string>
    <string name="not_registered">Not Registered?</string>
    <string name="your_password">Your password</string>
    <string name="your_username">Your username</string>
    <!--    <string name="login">Login</string>-->
</resources>
