<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".RegisterActivity"
    android:orientation="vertical"
    android:gravity="center_horizontal"
    android:background="@drawable/bg_login">

    <!--    adding logo for app-->


    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="125dp"
        android:layout_marginTop="30dp"
        android:contentDescription="image"
        app:srcCompat="@drawable/logo" />


    <!--    text message for user-->
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="30dp"
        android:layout_marginTop="80dp"
        android:layout_marginLeft="110dp"
        android:text="Register/Signup"
        android:textStyle="bold"
        android:textSize="20sp"/>

    <!--    input fields for username and password -->
    <EditText
        android:id="@+id/edittext_username"
        android:layout_width="200dp"
        android:layout_height="50dp"
        android:layout_marginTop="20dp"
        android:layout_marginLeft="100dp"
        android:drawableLeft="@drawable/ic_person_black_24dp"
        android:hint="@string/username" />


    <EditText
        android:id="@+id/edittext_password"
        android:inputType="textPassword"
        android:layout_width="200dp"
        android:layout_height="50dp"
        android:layout_marginTop="20dp"
        android:layout_marginLeft="100dp"
        android:drawableLeft="@drawable/ic_verified_user_black_24dp"
        android:hint="@string/password" />

<!--    another input for password-->
    <EditText
        android:id="@+id/edittext_cnf_password"
        android:inputType="textPassword"
        android:layout_width="200dp"
        android:layout_height="50dp"
        android:layout_marginTop="20dp"
        android:layout_marginLeft="100dp"
        android:drawableLeft="@drawable/ic_verified_user_black_24dp"
        android:hint="@string/confirm_password" />

    <!--    login button-->
    <Button
        android:id="@+id/button_register"
        android:layout_width="123dp"
        android:layout_height="40dp"
        android:layout_marginTop="20dp"
        android:layout_marginLeft="100dp"
        android:text="@string/register"
        android:background="#0a728a"/>


    <!--    another linear layout for registration link-->
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="10dp">

        <!--        adding text view for registration link-->

        <!--        not a registered user text-view-->
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="35dp"
            android:text="@string/already_registered"
            android:textColor="#03A9F4"/>

        <!--        registration link-->
        <TextView
            android:id="@+id/textview_login"
            android:layout_width="wrap_content"
            android:layout_height="35dp"
            android:paddingLeft="10dp"
            android:textStyle="bold"
            android:text="@string/login"
            android:textSize="16sp"
            android:textColor="#c7460a"/>

    </LinearLayout>


</LinearLayout>