<?xml version="1.0" encoding="utf-8"?>

<!--linear layout to wrap everything-->
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:orientation="vertical"
    android:gravity="center_horizontal"
    android:background="@drawable/bg_login">

    <!--    adding logo for app-->


    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="135dp"
        android:layout_marginTop="30dp"
        android:contentDescription="image"
        app:srcCompat="@drawable/logo" />


    <!--    text message for user-->
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="30dp"
        android:layout_marginTop="100dp"
        android:text="Login"
        android:textStyle="bold"
        android:layout_marginLeft="80dp"
        android:textSize="20sp"/>

    <!--    input fields for username and password -->
    <EditText
        android:id="@+id/edittext_username"
        android:layout_width="200dp"
        android:layout_height="50dp"
        android:layout_marginTop="27dp"
        android:layout_marginLeft="80dp"
        android:drawableLeft="@drawable/ic_person_black_24dp"
        android:hint="@string/your_username" />

    <!--    login button-->
    <EditText
        android:id="@+id/edittext_password"
        android:inputType="textPassword"
        android:layout_width="200dp"
        android:layout_height="50dp"
        android:layout_marginTop="20dp"
        android:layout_marginLeft="80dp"
        android:drawableLeft="@drawable/ic_verified_user_black_24dp"
        android:hint="@string/your_password" />

    <Button
        android:id="@+id/button_login"
        android:layout_width="123dp"
        android:layout_height="40dp"
        android:layout_marginTop="20dp"
        android:layout_marginLeft="80dp"
        android:text="@string/login"
        android:background="#0a728a"/>


    <!--    another linear layout for registration link-->
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="10dp"
        >

        <!--        adding text view for registration link-->

        <!--        not a registered user text-view-->
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="35dp"
            android:text="@string/not_registered"
            android:textColor="#00080a"/>

        <!--        registration link-->
        <TextView
            android:id="@+id/textview_register"
            android:layout_width="wrap_content"
            android:layout_height="35dp"
            android:paddingLeft="10dp"
            android:textStyle="bold"
            android:text="@string/register"
            android:textColor="#c7460a"/>

    </LinearLayout>

</LinearLayout>